--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,12 +1,113 @@
+@font-face {
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Work Sans'), local('WorkSans-Regular'), url(https://fonts.gstatic.com/s/worksans/v3/QGYsz_wNahGAdqQ43Rh_fKDptfpA4Q.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+body {
+    font-family: "Work Sans";
+}
+
+.prof {
+    width: 400px;
+    height: 550px;
+    margin: 0 auto;
+    box-shadow: 0px 0px 10px 0px rgba(204,204,204,1);
+    border-radius: 15px 15px 15px 15px ;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    height: 550px;
+    margin: 0 auto;
+    box-shadow: 0px 0px 10px 0px rgba(204,204,204,1);
+    border-radius: 15px 15px 15px 15px ;
+    padding: 30px;
+    background-color: rgb(255, 255, 255);
+}
+
+label {
+    margin-top: 15px;
+    margin-bottom: 5px;
+    
+    color: #1ECEFD;
+    font-weight: bold;
+}
+
+input {
+    border-radius: 20px;
+    border-style: none;
+    border: 1px solid black;
+    padding: 14px;
+}
+
+.bio-input {
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    border-radius: 20px;
+    border-style: none;
+    border: 1px solid black;
+    padding: 14px;
+}
+
 .pic{
     background-color: #1ECEFD;
+    height: 300px;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    border-radius: 15px 15px 0px 0px;
     
 }
 
+
+.info {
+    height: 100px;
+    padding: 15px;
+  
+}
 img {
     display: flex;
     align-self: center;
     border-radius: 50%;
-    width: 30%;
-    height: 30%;
+    height: 65%;
+    width: 50%;
+}
+
+h1 {
+    font-family: 'Cambria, Cochin', Georgia, Times, 'Times New Roman', serif;
+    font-size: 1.5em;
+    font-weight: 600;
+    margin-bottom: 5px;
+}
+
+button {
+    background-color: #505355;
+    display: flex;
+    justify-content: center;
+    width: 95%;
+    height: 35px;
+    border-radius: 15px;
+    margin: 0 auto;
+    font-size: 18px;
+    color: white;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    margin-top: 40px;
+    border: none;
+}
+
+button:hover {
+    background-color: #5BECD8;
+}
+
+.email {
+    color: lightgray;
+    margin-top: 5px;
 }
